--- a/.classpath
+++ b/.classpath
@@ -20,8 +20,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/LOC/Downloads/jdatepicker-1.3.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
