--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/LOC/Downloads/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jdatepicker-1.3.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
